@@ -4,7 +4,7 @@
 // Author:
 //   Jb Evain (jbevain@gmail.com)
 //
-// (C) 2005 Jb Evain
+// (C) 2005 - 2007 Jb Evain
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -236,6 +236,7 @@ namespace Mono.Cecil.Signatures {
 				break;
 			case ElementType.Array :
 				ARRAY ary = (ARRAY) t;
+				Write (ary.CustomMods);
 				ArrayShape shape = ary.Shape;
 				Write (ary.Type);
 				Write (shape.Rank);
@@ -247,7 +248,9 @@ namespace Mono.Cecil.Signatures {
 					Write (loBound);
 				break;
 			case ElementType.SzArray :
-				Write (((SZARRAY) t).Type);
+				SZARRAY sa = (SZARRAY) t;
+				Write (sa.CustomMods);
+				Write (sa.Type);
 				break;
 			case ElementType.Var :
 				Write (((VAR) t).Index);
