@@ -1,5 +1,13 @@
 2007-02-21  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil/ReflectionWriter.cs
+	  Mono.Cecil.Signatures/SzArray.cs
+	  Mono.Cecil.Signatures/Array.cs
+	  Mono.Cecil.Signatures/SignatureReader.cs
+	  Mono.Cecil.Signatures/TypeSpec.cs
+	  Mono.Cecil.Signatures/SignatureWriter.cs:
+		handle custom mods on arrays signatures.
+
 	* Mono.Cecil/ReflectionReader.cs:
 		Handle fields TypeSpecs that have an initial value.
 		Based on a patch by Argiris Kirtzidis <akyrtzi@gmail.com>
